# SeeAct2

./: .env.example  .gitignore  AGENTS.md  API-details.md  API.md  CONTRIBUTING.md  Makefile  PERSONAS.md  README.md  persona_ids.json  persona_ids_all.json  populate_mock_ga_data.py  pyproject.toml  pytest.ini  run_api.py  tasks_A.json  tasks_B.json  traces
.github/workflows/: ci.yml
config/: api_costs.yaml  base.toml  base_browserbasetest.toml  base_justlook.toml  personas.yaml
config/profiles/: browserbase.toml  demo.toml  openai_finetune.toml
config/prompts/: prompt_reason.json  prompt_smallchanges.json  prompt_standard.json  prompt_standard_oldformat.json  prompts_justlook.json
data/online_tasks/: experiment_08146eff-a022-41a1-82a0-6918e40c5368_A.json  experiment_08146eff-a022-41a1-82a0-6918e40c5368_B.json  experiment_cfb757ce-f4c8-4171-8e91-c56a7d432615_A.json  experiment_cfb757ce-f4c8-4171-8e91-c56a7d432615_B.json  hijabkart_phase4_tasks.json  hijabkart_tasks.json  kitkat_tasks.json  sample_tasks.json  shopify_cups.json  tasks_A.json
data/personas/: hijabkart_runner.yaml  master_pool.jsonl  master_pool.yaml  sample_personas.yaml  vocab.json
runs/experiment_872007c2-324b-4aa7-9b72-75d7c47c6ab1/: interrupted_results.json  partial_results.json
runs/experiment_d56060a7-f388-46af-bf04-5bcb70cc287f/: interrupted_results.json  partial_results.json
runs/experiment_e021c8af-ddda-48f4-90b1-82c7d19d683e/: interrupted_results.json  partial_results.json
runs/run_8216a49ce595/: metrics.jsonl
scripts/: bootstrap.sh  e2e_personas.py  export_traces.py
seeact_package/: pyproject.toml  requirements.txt
seeact_package/seeact/: agent.py
seeact_package/seeact_package/: __init__.py
site_manifest/: example.com.json
src/: personas_cli.py  runner.py  seeact.py
src/api/: main.py
src/config/: auto_mode.toml  demo_mode.toml  online_exp.toml  openai_ft.toml
src/demo_utils/: browser_helper.py  inference_engine.py
src/eval/: RunEvaluator.py
src/offline_experiments/: offline_experiment.py
src/personas/: __init__.py  cli.py  taxonomy.py
src/runtime/: browserbase_client.py
src/seeact/: Exceptions.py  __init__.py  agent.py  calibrate.py  execution.py  manifest.py  mark_page.js  runner.py  seeact.py  settings.py
tests/: test_agent_smoke.py  test_agent_url_category.py  test_browser_helper.py  test_calibrator.py  test_cli_smoke.py  test_hybrid_integration.py  test_manifest_integration.py  test_manifest_loader.py  test_openai_integration.py  test_overlay_cache.py  test_personas_cli.py  test_recommendation_gating.py  test_runner_browserbase.py  test_runner_metrics.py  test_runner_smoke.py  test_runtime_config.py  test_runtime_local_smoke.py  test_shopping_flow_smoke.py
(+182 files in other folders)
