[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seeact"
version = "0.3.0.dev0"
description = "SeeAct web agent (consolidated src package)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "OSU NLP Group" }
]
dependencies = [
  "backoff",
  "playwright>=1.45",
  "toml",
  "openai==1.24.0",
  "httpx==0.27.2",
  "litellm==1.35.32",
  "google-generativeai==0.5.2",
  "python-dotenv>=1.0",
  "aioconsole>=0.8",
  "lxml>=4.9.3",
  "beautifulsoup4>=4.12.2",
  "requests>=2.31.0",
  "psycopg[binary]>=3.2",
  "PyYAML>=6.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
vision = [
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "torchaudio>=2.3.0",
]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
