[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "seeact"
version = "0.2.9.1"
description = "SeeAct is a system for generalist web agents that autonomously carry out tasks on any given website, with a focus on large multimodal models (LMMs) such as GPT-4V(ision). It consists of two main components: (1) A robust codebase that supports running web agents on live websites, and (2) an innovative framework that utilizes LMMs as generalist web agents."
authors = [
    {name = "Boyu Gou", email = "gou.43@osu.edu"},
    {name = "Boyuan Zheng", email = "zheng.2372@osu.edu"},
    {name = "Zheng Du", email = "du.913@osu.edu"}
]
license = {file="LICENSE"}
readme = "https://github.com/OSU-NLP-Group/SeeAct/blob/main/README.md"
requires-python = ">=3.9"

dependencies = [
    "backoff",
    "playwright>=1.45",  # users still run 'playwright install'
    "toml",
    "openai==1.24.0",
    "httpx==0.27.2",
    "litellm==1.35.32",
    "google-generativeai==0.5.2",
    "python-dotenv>=1.0",
    "aioconsole>=0.8",
    "lxml>=4.9.3",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
vision = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.urls]
homepage = "https://osu-nlp-group.github.io/SeeAct/"
repository = "https://github.com/OSU-NLP-Group/SeeAct"
documentation = "https://github.com/OSU-NLP-Group/SeeAct"
